fix scroll bar color in dark mode

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,4 +15,25 @@
         color: rgb(127, 122, 116);
         background-color: rgb(17, 18, 19);
     }
+
+    ::-webkit-scrollbar {
+        background-color: #2b2d2d;
+        color: #aca496;
+    }
+    ::-webkit-scrollbar-thumb {
+        background-color: #4e5151;
+    }
+    ::-webkit-scrollbar-thumb:hover {
+        background-color: #5f6364;
+    }
+    ::-webkit-scrollbar-thumb:active {
+        background-color: #515455;
+    }
+    ::-webkit-scrollbar-corner {
+        background-color: #242525;
+    }
+    * {
+        scrollbar-color: #2b2d2d #4e5151;
+    }
+
 }
